Day 8, part 2 (still not working :( )